--- a/src/App.css
+++ b/src/App.css
@@ -15,15 +15,16 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 20px;
+  cursor: pointer;
 }
-
 .App-link {
   color: #61dafb;
 }
@@ -34,5 +35,95 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.spinner{
+  height: 80px;
+  margin: auto;
+
+}
+
+.App-intro {
+  font-size: large;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+.movies {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.movie {
+  width: 350px;
+  height: 450px;
+  margin-right: 20px;
+}
+
+.App-header h2 {
+  margin: 0;
+}
+
+.add-movies {
+  text-align: center;
+}
+
+.add-movies button{
+  font-size: 16px;
+  padding: 8px;
+  margin: 0 10px 30px 20px;
+}
+
+.errorMessage{
+  margin: auto;
+  font-weight: bold;
+  color: rgb(161,15,15);
+}
+
+.search{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+input[type="submit"]{
+    padding: 5px;
+  background-color: transparent;
+  color: black;
+  border: 1px solid black;
+  width: 80px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #282c34;
+  color: antiquewhite;
+}
+
+.search > input[type="text"]{
+  width: 40%;
+  min-width: 170px;
+}
+
+@media screen and (min-width:652px)and (max-width:693px) {
+  .movie{
+    max-width: 50%;
+  }
+}
+
+
+@media screen and (max-width: 651px) {
+  .movie {
+    max-width: 100%;
+    margin: auto;
   }
 }
